force-app/main/default/objects/BIWorkbook_Table__c/BIWorkbook_Table__c.object-meta.xml
<CustomObject>
    <label>BIWorkbook_Table</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BIWorkbook_Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIWorkbooks_Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>