force-app/main/default/objects/BIWorkbook_Table__c/fields/BI_Workbook__c.field-meta.xml
<CustomField>
    <fullName>BI_Workbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BI Workbook</label>
    <referenceTo>BiWorkbook__c</referenceTo>
    <relationshipLabel>BIWorkbooks_Tables</relationshipLabel>
    <relationshipName>BIWorkbooks_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>