force-app/main/default/objects/BIWorkbook_Table__c/fields/BIWorkibook_Table_ID__c.field-meta.xml
<CustomField>
    <fullName>BIWorkibook_Table_ID__c</fullName>
    <externalId>true</externalId>
    <label>BIWorkibook_Table_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>