force-app/main/default/objects/BIWorkbook_Table__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>BIWorkbooks_Tables</relationshipLabel>
    <relationshipName>BIWorkbooks_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>